# edu_service_project

./: README.md  pyproject.toml
config/: settings.py  urls.py
fixtures/: lms_data.json  quiz.json
lms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_material_section.py  0003_alter_material_section.py  0004_alter_material_section.py
quiz/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
quiz/migrations/: 0001_initial.py  0002_answer_user.py  0003_remove_answer_user_alter_question_is_active_and_more.py  0004_alter_currentanswer_answer_text.py
users/migrations/: 0001_initial.py
